# Sandbox

./: README.md  apiVersion: v0.1  dolarApp.py  pdfRecorte.py
AI-Hackathon/: app.py  backend.py
Bash_scripts/: sync_branches.sh
Python_Scripts/: alert_caller.py  dolarApp.py  pdfRecorte.py  postman_data_analisis.py  postman_loop_run.py
Python_Scripts/thread_practice/: 1114.py  1115.py
code4good2025/: asistencias.py  empresas.py
decisionizer/: README.md  app.py
ros_tryouts/ros_ciie_ws/: Dockerfile  README.md  build.sh  run.sh
ros_tryouts/ros_ciie_ws/install/: local_setup.sh  setup.sh
ros_tryouts/ros_ciie_ws/install/arm_control/share/arm_control/: package.sh  package.xml
ros_tryouts/ros_ciie_ws/install/hello_agent/share/hello_agent/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_tryouts/ros_ciie_ws/log/: latest_build
ros_tryouts/ros_ciie_ws/src/arm_control/: README.md  package.xml  setup.py
ros_tryouts/ros_ciie_ws/src/arm_control/arm_control/: arm_node.py  arm_serial_bridge.py
ros_tryouts/ros_ciie_ws/src/install/: local_setup.sh  setup.sh
ros_tryouts/ros_ciie_ws/src/install/arm_control/share/arm_control/: package.sh  package.xml
ros_tryouts/ros_ciie_ws/src/log/: latest_build
ros_tryouts/ros_maquinas/: publisher.py  subscriber.py
